infra/manifests/ingress/services-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-template-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: service-template
  ports:
    - port: 8081
      nodePort: 32084
      targetPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: consul-nodeport
  namespace: consul
spec:
  type: NodePort
  selector:
    app: consul-ui
  ports:
    - port: 80
      nodePort: 32082
      targetPort: 80
